# federated-nlp

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: the_brothers_karamazov.txt
src/: federator.py  runner.py
src/client/: client.py
src/training/: input_data.py  trainer_base.py  trainer_word2vec.py
